# epfl-cpp-vscode-template

./: .gitignore  CMakeLists.txt  README.md
scripts/: settings.json  setup-linux.sh  setup-windows.bat
scripts/linux/: compile.sh  launch.json  release-compile.sh  release-run.sh  run.sh  tasks.json
scripts/windows/: compile.bat  launch.json  release-compile.bat  release-run.bat  run.bat  tasks.json
src/: main.cpp
